docs: 添加和重构代码的注释